Fixed comment rating styling on mobile (#775)
* issue 448 solved

* class added

--- a/assets/styles/elements.scss
+++ b/assets/styles/elements.scss
@@ -200,6 +200,23 @@ input:disabled {
     padding: 10px;
 }
 
+.star {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 5px;
+    @include mobile {
+        left: 10px;
+        top: inherit !important;
+        margin-top: 0 !important;
+    }
+    & + p {
+        @include mobile {
+            margin-top: 40px;
+        }
+    }
+}
+
 .select-container {
     position: relative;
     width: 200px;
